fix: remove native scrollbar from timeline
Revert a css change to remove the native scrollbar from the controller's bottom area which contains the timeline

--- a/src/css/editor/Controller.less
+++ b/src/css/editor/Controller.less
@@ -157,8 +157,7 @@
 
     .bottom {
         height: 10em;
-        overflow-x: hidden;
-        overflow-y: scroll;
+        overflow: hidden;
 
         .bottom-content-wrapper{
             display: flex;
